# ViCE

./: .buildinfo  .gitignore  AUTHORS.rst  README.rst  api_reference.html  foreward.html  genindex.html  index.html  objects.inv  preface.html  py-modindex.html  runtests.py  search.html  searchindex.js  setup.cfg  setup.py  wtactics.sqlite
ViCE.egg-info/: PKG-INFO  SOURCES.txt
_modules/: index.html  vice.html
_modules/vice/: database.html  plugins.html
_sources/: api_reference.txt  foreward.txt  index.txt  preface.txt
_sources/appendices/: appendix_a.txt  appendix_index.txt
_sources/designer_guide/: designer_index.txt  index.txt  intro.txt
_sources/developer_guide/: architecture.txt  developer_index.txt  index.txt  intro.txt
_sources/player_guide/: player_index.txt
appendices/: appendix_a.html  appendix_index.html
designer_guide/: designer_index.html  index.html  intro.html
developer_guide/: architecture.html  developer_index.html  index.html  intro.html
doc/: Makefile  convert_svgs.sh  framework_stack_diagram.ep  process_images.sh
doc/examples/: main.py
doc/latex/: ViCE.aux  ViCE.idx  ViCE.ilg  ViCE.ind  ViCE.out  ViCE.tex  ViCE.toc
doc/source/: api_reference.rst  conf.py  foreward.rst  index.rst  preface.rst
doctrees/: api_reference.doctree  environment.pickle  foreward.doctree  index.doctree  preface.doctree
doctrees/appendices/: appendix_a.doctree  appendix_index.doctree
doctrees/designer_guide/: designer_index.doctree  index.doctree  intro.doctree
doctrees/developer_guide/: architecture.doctree  developer_index.doctree  index.doctree  intro.doctree
doctrees/player_guide/: index.doctree  intro.doctree  player_index.doctree
examples/: main.py
examples/wtactics/: __init__.py  items.py
examples/yugioh/: CardData4.txt  README.rst  __init__.py  formats.txt
latex/: ViCE.aux  ViCE.idx  ViCE.ind  ViCE.out  ViCE.tex  ViCE.toc
player_guide/: index.html  intro.html  player_index.html
src/vice/: __init__.py  database.py
tests/: property_dict_test.py  test_database_module.py  test_vice_package.py
tests/plugins/: test_actions_module.py  test_containers_module.py  test_items_module.py  test_plugins_module.py  (+2 more)
vice/: __init__.py  database.py  database2.py  main.py
vice/ui/: cli.py  (+5 more)
(+66 files in other folders)
