[metadata]
name = ViCE
version = 0.0.1
summary = Portable, open source, modular framework for both creating and playing trading card games.
download_url = https://github.com/aspidits/ViCE/downloads
home_page = http://aspidites.github.com/ViCE
author = Edwin Marshall
author_email = aspidites@wtactics.org
description-file = README.rst
classifier = 
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Topic :: Games/Entertainment :: Board Games

[files]
packages = 
    vice
    vice.plugins
    vice.plugins.rules
extra_files =
    README.rst
