[metadata]
name = ViCE
version = 0.1.0
summary = Portable, open source, modular framework for both creating and playing trading card games.
home_page = http://github.com/aspidites/ViCE
download_url = https://github.com/aspidits/ViCE/downloads/ViCE-0.1.0.tar.gz
project_url =
    Documentation, https://aspidites.github.com/ViCE
    Bug Tracker, https://github.com/aspidites/ViCE/issues
    IRC, irc://freenode.net/%23wtactics
    Forums, http://wtactics.org/forum
author = Edwin Marshall
author_email = aspidites@wtactics.org
description-file = README.rst
keywords = TCG, CCG, WTactics
requires-dist = 
    SQLAlchemy (>= 0.7.7)
    Distutils2 (>= 1.0)
requires-python = >=2.7

classifier = 
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Topic :: Games/Entertainment :: Board Games

[files]
packages = 
    vice
    vice.plugins
    vice.plugins.rules
extra_files =
    README.rst
resources =
    doc/* = {datadir}/{doc}

[test]
suite = tests
